Update for Jekyll master page

--- a/index.html
+++ b/index.html
@@ -1,32 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Umut Karakulak - Coding Blog</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-    </nav>
-    <div class="container">
-      <div class="main_text">
-        <h1>Welcome to my personal page...</h1>
-        <p>I'm a software engineer that likes to learn and experiment with state of the art technologies, especially the cool stuff.<br>
-          You can learn more <a href=/about>about me</a>, or can see what I'm up to in my <a href=/blog>blog</a> where I intend to talk about projects I am working on (hopefully frequently).
-        </p>
-      </div><!-- /.main_text -->
-    </div><!-- /.container -->
-    <footer>
-      <ul>
-        <li><a href="mailto:umutkarakulak@hotmail.com">umutkarakulak@hotmail.com</a></li>
-        <li><a href="https://github.com/umutto">github.com/umutto</a></li>
-      </ul>
-    </footer>
-  </body>
-</html>
+---
+layout: default
+title: Umut Karakulak - Coding Blog
+---
+<div class="blurb">
+  <h1>Welcome to my personal page...</h1>
+  <p>I'm a software engineer that likes to learn and experiment with state of the art technologies, especially the cool stuff.<br>
+    You can learn more <a href=/about>about me</a>, or can see what I'm up to in my <a href=/blog>blog</a> where I intend to talk about projects I am working on (hopefully frequently).
+  </p>
+</div><!-- /.blurb -->
