--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,5 @@ title: About Umut Karakulak
 ---
 <div class="blurb">
 	<h1>Umut Karakulak</h1>
-	<p>
-    Yep, empty until I can manage to get writing...
-  </p>
+	<p>Yep, empty until I can manage to get writing... Also should probably upload my CV here too...</p>
 </div><!-- /.blurb -->
