about me -> about

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title: Umut Karakulak - Coding Blog
 <div class="blurb">
   <h1>Welcome to my personal page...</h1>
   <p>I'm a software engineer that likes to learn and experiment with state of the art technologies, especially the cool stuff.<br>
-    You can learn more <a href=/about>about me</a>, or can see what I'm up to in my <a href=/blog>blog</a> where I intend to talk about projects I am working on (hopefully frequently).
+    You can learn more <a href=/about>about</a> me, or can see what I'm up to in my <a href=/blog>blog</a> where I intend to talk about projects I am working on (hopefully frequently).
   </p>
 </div><!-- /.blurb -->
