--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,6 @@
----
-layout: default
-title: About Umut Karakulak
----
+--- layout: default title: About Umut Karakulak ---
 <div class="blurb">
 	<h1>Umut Karakulak</h1>
-	<p>Yep, empty until I can manage to get writing... Also should probably upload my CV here too...</p>
-</div><!-- /.blurb -->
+	<p>Placeholder until I can manage to write something up.</p>
+</div>
+<!-- /.blurb -->
