--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Umut Karakulak - Coding Blog
+title: Umut Karakulak - A Coding Blog
 ---
 <div class="blurb">
   <h1>Welcome to my personal page...</h1>
