--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,7 @@
---- layout: default title: About Umut Karakulak ---
+---
+layout: default
+title: About Umut Karakulak
+---
 <div class="blurb">
 	<h1>Umut Karakulak</h1>
 	<p>Placeholder until I can manage to write something up.</p>
